examples/test/testpolicy13454.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13454
  namespace: namespace304
spec:
  podSelector:
    matchLabels:
      key13: value38
      key32: value0
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key18: value38
      podSelector:
        matchLabels:
          key42: value2
          key37: value21
          key36: value15
